Pass CategoryRange label change to parent QCategoryAxis

Fixes: QTBUG-78439
Change-Id: I1c0de505c73ea42e67947fed91a535a117a2ad5b
Reviewed-by: Mahmoud Badri <mahmoud.badri@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>